--- a/project_final/project/myapp/src/component/orders/orderView.css
+++ b/project_final/project/myapp/src/component/orders/orderView.css
@@ -9,7 +9,7 @@ body {
   font-weight: 300;
   line-height: 1.42em;
   color:#A7A1AE;
-  background-color:#1F2739;
+  /*background-color:#1F2739;*/
 }
 
 
